--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,14 @@
     <title>OSC data visualisation</title>
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>    
-    <script type="text/javascript" src="./vega-lite.js" defer></script>
+    <script type="text/javascript" src="./interaction.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   </head>
   <body>
     <h1>OSC data visualisation</h1>
     <div id="barChart"></div>
     <div id="scatterPlot"></div>
+    <div id="crossBarChart"></div>
   </body> 
   <script>
 
