change to financial data

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
   <body>
     <h1>OSC data visualisation</h1>
     <div id="barChart"></div>
-    <div id="scatterPlot"></div>
-    <div id="crossBarChart"></div>
+    <!-- <div id="scatterPlot"></div>
+    <div id="crossBarChart"></div> -->
   </body> 
   <script>
 
