--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,14 @@
   </head>
   <body>
     <h1>OSC data visualisation</h1>
+    <label for="ticker">Choose a ticker:</label>
+    <select name="ticker" id="tickerSelect">
+      <option value="AMZN">AMZN</option>
+      <option value="NFLX">NFLX</option>
+      <option value="AAPL">AAPL</option>
+      <option value="TSLA">TSLA</option>
+    </select>
+    <br>
     <div id="barChart"></div>
     <!-- <div id="scatterPlot"></div>
     <div id="crossBarChart"></div> -->
