--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,4 +2,28 @@ body {
     /* background-color: #121212;
     color: #FFFFFF; */
 }
+.select-box {
+    display: none;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 
+
+.select-box .option {
+    cursor: pointer;
+    padding: 12px 24px;
+}
+
+.select-box label {
+    cursor: pointer;
+}
+
+.select-box .radio{
+    display: none;
+}
+
+.option:focus {
+    background-color: #f5f5f5;
+    outline: none
+}
