--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,3 @@
-body {
-    /* background-color: #121212;
-    color: #FFFFFF; */
-}
 .select-box {
     display: none;
     justify-content: center;
@@ -26,4 +22,61 @@ body {
 .option:focus {
     background-color: #f5f5f5;
     outline: none
+}
+
+#display {
+    display: flex;
+    align-items: flex-start;
+}
+
+.list-items {
+    position: relative;
+    padding: 16px;
+    margin-top: 15px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.list-items .item {
+    display: flex;
+    align-items: center;
+    list-style: none;
+}
+
+.item .checkbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 16px;
+    width: 16px;
+    border: 1.5px solid #c0c0c0;
+    border-radius: 4px;
+    margin-right: 12px;
+}
+
+.checkbox .check-icon {
+    font-size: 13px;
+    transform: scale(0);
+}
+
+.item.checked .check-icon {
+    transform: scale(1);
+}
+
+.item {
+    padding: 12px;
+}
+
+.item:focus {
+    border: 1.5px solid #c0c0c0;
+    border-radius: 4px;
+}
+
+
+#addOns {
+    visibility: hidden;
+}
+
+#addOns.show {
+    visibility: visible;
 }
