select addon lines

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,18 +41,25 @@
       <div id="barChart"></div>
       <div id="addOns">
         <ul class="list-items">
-          <li class="item" tabindex="0">
+          <li class="item" id="7days" tabindex="0">
             <span class="checkbox">
               <i class="fa-solid fa-check check-icon"></i>
             </span>
             <span class="item-text">Moving average 7 days</span>
           </li>
 
-          <li class="item" tabindex="0">
+          <li class="item" id="30days" tabindex="0">
             <span class="checkbox">
               <i class="fa-solid fa-check check-icon"></i>
             </span>
             <span class="item-text">Moving average 30 days</span>
+          </li>
+
+          <li class="item" id="std" tabindex="0">
+            <span class="checkbox">
+              <i class="fa-solid fa-check check-icon"></i>
+            </span>
+            <span class="item-text">Standard deviation</span>
           </li>
         </ul>
       </div>
