pie chart tooltip

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>    
     <script type="text/javascript" src="./interaction.js" defer></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   </head>
@@ -56,6 +57,8 @@
           </li>
 
         </ul>
+      </div>
+      <div id="pieChartInfo">
       </div>
     </div>
     
