--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,8 @@
       </div>
       <div id="pieChartInfo">
       </div>
+      <div id="tooltipInfo">
+      </div>
     </div>
     
   </body> 
