--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OSC data visualisation</title>
+    <title>Interactive data analysis using control surfaces</title>
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>    
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   </head>
   <body>
-    <h1>OSC data visualisation</h1>
+    <div class="title-container">
+      <img src="imperial-logo.png" alt="Imperial-logo">
+      <h1>Interactive data analysis using control surfaces</h1>
+    </div>
+
     <div class="select-box" id="tickerSelect">
       <div>Select ticker</div>
       <div class="options-container" id="options-container">
