--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,14 @@
+
+.title-container img {
+    margin-top: 10px;
+    width: 100px; 
+    height: auto;
+}
+
+.title-container {
+    margin-left: 20px;
+}
+
 .select-box {
     display: none;
     justify-content: center;
@@ -25,6 +36,7 @@
 }
 
 #display {
+    margin-left: 20px;
     display: flex;
     align-items: flex-start;
 }
