--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,3 @@
-
 .title-container img {
     margin-top: 10px;
     width: 100px; 
@@ -91,4 +90,24 @@
 
 #addOns.show {
     visibility: visible;
+}
+
+.tooltip-header {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+.tooltip-content {
+    font-size: 14px;
+    color: #666;
+}
+
+.tooltip-content div {
+    margin: 2px 0;
+}
+
+.tooltip-content strong {
+    color: #000;
 }
