include touchosc file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
       <img src="imperial-logo.png" alt="Imperial-logo">
       <h1>Interactive data analysis using control surfaces</h1>
     </div>
-
+    <div id="overlay"></div>
     <div class="select-box" id="tickerSelect">
-      <div>Select ticker</div>
+      <div><strong>Select ticker</strong></div>
       <div class="options-container" id="options-container">
         <div class="option" tabindex="0">
           <input type="radio" class="radio" id="AMZN" name="category">
