--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,11 +8,33 @@
     margin-left: 20px;
 }
 
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 900;
+    display: none;
+}
+
 .select-box {
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: none;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%; 
+    z-index: 1000; 
+    transform: translate(-50%, -50%); 
+    border:#ccc 1px solid;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
 }
 
 
@@ -38,6 +60,8 @@
     margin-left: 20px;
     display: flex;
     align-items: flex-start;
+    position: relative;
+    z-index: 1;
 }
 
 .list-items {
